added YAML front matter

--- a/r-at-sea-carpentry-con/r-at-sea-carpentry-con.html
+++ b/r-at-sea-carpentry-con/r-at-sea-carpentry-con.html
@@ -1,3 +1,8 @@
+---
+title: R at Sea: A Carpentry-Inspired Workshop for Immersive Learning On and Under the Water
+
+---
+
 [Field School](http://www.getintothefield.com) is a Miami-based organization that provides hands-on training and practical research skills in marine science; experience that is critical for working in marine and environmental fields and for admission to graduate studies. Led by a team of wonderful humans including Dr. Catherine MacDonald, Dr. Julia Wester, and Christian Pankow, Field School operates from a 55 foot marine research and dive vessel, the RV Garvin.
 
 Some of their most popular courses include Marine Tropical Ecology, where students learn and practice everything from free diving to deploying underwater camera systems and Shark and Ray Handling, where students learn how to build and use a variety of fishing gear from scratch, and safely handle, measure, and tag pelagic sharks. Other courses include using RoVs, tracking Sperm Whales, and exploring the Dry Tortugas. Additionally, students get real world experience living and working on a research vessel, and transferable fisheries skills like navigation, boat safety, and knots. So, where does coding fit into this picture? Well, as we all know, collecting the data is not the end of a research project!
