--- a/r-at-sea-carpentry-con/r-at-sea-carpentry-con.html
+++ b/r-at-sea-carpentry-con/r-at-sea-carpentry-con.html
@@ -1,21 +1,30 @@
 ---
-title: To the most inspiring people - the Carpentries community!
+title: R at Sea: A Carpentry-Inspired Workshop for Immersive Learning On and Under the Water
 
 ---
 
-*June 11, 2018*
+*June 18, 2018*
 
-First and foremost – I can’t believe the inaugural CarpentryCon is over! After so many months of planning, it feels surreal that those three amazing days are behind us. I lost count of the number of times I felt downright emotional with happiness and love and belonging and happiness and love (and have I mentioned happiness?).
-  
-One of my favourite outcomes of this event is that every single CarpentryCon attendee benefited from the conference in different ways. It has been incredible to hear from so many people what their favourite sessions were, or, even better, how they felt they were able to grow from the experience. Personally, my confidence in speaking to (and in front of!) people and in my ability to manage tasks has increased ten-fold over the last week. I also feel like I’ve been exposed to the most wonderful display of inclusivity, accessibility, and diversity, and I’m determined to carry what I’ve learned about being an ally into my life and work in Canada.
-  
-Frankly, a big portion of the conference was an absolute blur. I learned that my strongest role in this venture was not in handling (or even totally understanding) the financial side of things, or organizing catering, or booking rooms, or making important decisions. Instead, I found myself eager to deal with the day-to-day logistics and seemingly minute details that ideally help things run smoothly. I get fixated on the details, and CarpentryCon was no exception. I worried about things like *“Which sessions will need rooms with plugs?”*, and *“Is the correct time zone being used for pre-scheduled tweets?”*, and forgot entirely about things like *“Which rooms have been booked?”*, and *“Where is the conference dinner being hosted?”*… As such, I hugely appreciate being part of an amazing team who were able to see the forest rather than just the trees (or, in my case, the moss growing on the branches of the trees). Admittedly, this was my first “real” experience with conference organization, and there were a LOT of details that I (or any of us!) hadn’t considered until they suddenly needed to be addressed. As a result, you may have seen me running up and down the stairs in a flurry; if I rushed past you in a sweaty mess muttering about losing my program again – sorry!
-  
-On that note, **THANK YOU** to the amazing volunteers, task force members, Carpentries staff and conference attendees who stepped up to take on last minute tasks like re-printing and re-posting all our signage (we joke that the original “CapentryCon2018” signs will become memorabilia someday), setting up Etherpads, stuffing bags, taking notes at sessions, guarding luggage, and the million and one other seemingly small but incredibly important tasks that made this conference such a success. I also want to personally say a big **THANK YOU** to all of you who flooded Twitter with your insights, observations, and live tweets from the various sessions! Having the community actively contribute to our social media presence not only helped to share the conference with the world but also took a huge amount of work off my hands. [Francois](https://twitter.com/fmic_) has written an [awesome report](https://carpentries.org/2018/06/carpentrycon-tweets) about how Twitter and our #CarpentryCon2018 hashtag was used!
-  
-I’m so excited to start reviewing feedback from the conference and working through the offboarding process; I’m confident that I can speak for the entire task force when I say that we learned A LOT and look forward to passing that knowledge on to the Carpentries community and beyond.
-  
-Because I simply can’t say it enough: **THANK YOU** **THANK YOU** **THANK YOU** **THANK YOU**.
+[Field School](http://www.getintothefield.com) is a Miami-based organization that provides hands-on training and practical research skills in marine science; experience that is critical for working in marine and environmental fields and for admission to graduate studies. Led by a team of wonderful humans including Dr. Catherine MacDonald, Dr. Julia Wester, and Christian Pankow, Field School operates from a 55 foot marine research and dive vessel, the RV Garvin.
 
-Much love,  
-Danielle Q
+Some of their most popular courses include Marine Tropical Ecology, where students learn and practice everything from free diving to deploying underwater camera systems and Shark and Ray Handling, where students learn how to build and use a variety of fishing gear from scratch, and safely handle, measure, and tag pelagic sharks. Other courses include using RoVs, tracking Sperm Whales, and exploring the Dry Tortugas. Additionally, students get real world experience living and working on a research vessel, and transferable fisheries skills like navigation, boat safety, and knots. So, where does coding fit into this picture? Well, as we all know, collecting the data is not the end of a research project!
+
+Ecologists and marine biologists are increasingly aware of the need for students and researchers to also be competent programmers and statisticians. Speaking to the Field School Directors, we agreed that these skill sets should be highlighted and offered in the same way as the more traditional marine science skills.
+The purpose of R at Sea was to emphasize the role and importance of coding and statistics in research skills and to provide an opportunity for students.
+Our hook was a novel twist on traditional coding courses. We targeted those students who knew they should learn ecological modelling techniques in R but were so called “fence sitters”, not yet ready to make the commitment.
+
+Not only did students live and learn aboard the RV Garvin, but intensive R sessions were broken up by activities like snorkeling, free-diving, and learning to identify local fish and coral species. So, what have I learned about offering this kind of course?
+
+Non-traditional learning spaces can work - but they provide a unique set of challenges. Some of the Carpentries techniques, like sticky notes and pair programming become more important than ever because the space is difficult to move around in as an instructor.
+
+As you may imagine, trying to teach students statistics and coding at the same time leads to cognitive overload. To battle this, I use faded-example inspired code-alongs by providing fill-in-the-blank coding template that provides comments that help learners recognize patterns in modelling processes.
+
+Casual, optional evening sessions WORK when everyone is in the same boat… figuratively, and in this case, literally. They lead to excitement, discussions, and cooperative coding as learners apply what they have learned to their own data sets and help each other troubleshoot their scripts.
+
+As I mentioned, we wanted to target those learners identified as "fence-sitters"; those that needed that extra convincing to take the plunge into coding. By offering a novel twist on a traditional coding course, we were able to draw them in! "Everything else" (the location, the research vessel, the adventure) is what some learners came for. What they took away, however, was how to code and a comprehensive introduction to ecological modelling.
+
+What will I do differently next time? Define modelling expectations: one aspect of the Carpentries lessons that I didn’t incorporate as much as I should have was establishing learning objectives and expectations. Because these students were novices to ecological modelling, their expectations reflected that, and were often variable, unclear, or hindered by misconceptions. Coworking sessions, as mentioned, were extremely successful; in the future I’ll allocate more time for this! No internet (or unreliable internet): make sure you have everything your students will need on flash drives. This includes all of the software, packages, and data compatible with each operating system. The sun can drain your energy! Plan your activities and breaks accordingly.. Seasickness impedes coding - ginger gravol (anti-nausea medication) should be added to the to-bring list..
+
+I think that these sort of “coding retreats” have the potential to be a valuable resources for learners. We recently announced our next round of R at Sea, which will be happening September 1-3, 2018; if you or anyone you know might be interested in becoming a student with Field School, check out the website and / or contact me at danielle.quinn@mun.ca!
+
+
